--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <!-- Scalable heart-shaped container -->
   <div class="heart">
-    <img src="https://via.placeholder.com/600" alt="Your Image">
+    <img src="./assets/img/us.jpeg" alt="Your Image">
   </div>
 
   <button id="openLetter">
