--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
   <div class="letter-overlay" id="letterOverlay">
     <div class="letter">
       <h2>My Love Letter 💌</h2>
-      <p>(Your beautiful words will go here...)</p>
+      <p>
+        Hello Love,
+        <p>
+          Recently we talked about how we met for the first time and how we felt about all our “firsts.” It was such a beautiful dive into our memories. Remembering those moments made me fall in love with you all over again. I had been missing us for some time, but I feel like we’ve caught that vibe again thinking the same thoughts, saying the same words. I don’t know if it’s just a vibe matching or if it’s our hearts truly matching.
+        </p>
+         <p>
+          I still remember holding your hand for the first time and calling it mine that very day. I’m grateful you trusted me with your hand, and I promise it is mine, a part of me. I will give everything to protect it and live for it.
+         </p> 
+         <p>
+          While cleaning my gallery and posting old stories, I was reliving all those moments in my mind, and it left a big big big smile on my face. Sometimes I feel like you are a dream I always craved. Living this dream with you makes me the happiest man on earth.
+        </p>
+        <p>
+          I just want to say that I love you, and nothing in this world will ever stop me from loving you.
+        </p>  
+      Yours,
+      <br>
+      Peru
+    </p>
       <button class="close-btn" id="closeLetter">Close</button>
     </div>
   </div>
