--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <div class="lock-container">
     <h2>Enter Secret Code 🔒</h2>
-    <input type="password" id="codeInput" placeholder="Secret code">
+    <input type="password" id="codeInput" placeholder="4 digit secret code">
     <button onclick="checkCode()">Unlock</button>
     <div id="errorMsg" class="error"></div>
   </div>
